--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "csv-stringify": "^5.3.3",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
-    "xlsx": "^0.15.1"
+    "xlsx": ">0.17.0"
   }
 }
